# Snake

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: ci.yml
src/: Game.cpp  Game.h  Random.cpp  Random.h  main.cpp  main.h
src/Entities/: Apple.cpp  Apple.h  Entity.cpp  Entity.h  Snake.cpp  Snake.h
src/Factories/: AppleFactory.cpp  AppleFactory.h
src/Field/: Field.cpp  Field.h
src/States/: State.h  StateMachine.cpp  StateMachine.h  States.cpp  States.h
